--- a/static/sass/base/_layout.scss
+++ b/static/sass/base/_layout.scss
@@ -1,5 +1,4 @@
 .container {
-    overflow: auto;
     max-width: 1140px;
     margin: 0 auto;
     height: 100%;
